generated-tests/tests/snapshots/ts/test_generated_primary_type.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const value2: Type = 42;

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier value2)
      (type_annotation
        (type_identifier)
      )
      (number)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "value2",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 13,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "Type",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 15,
                end_line: 1,
                end_column: 19,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
