generated-tests/tests/snapshots/ts/test_generated_regex_pattern.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const regex = /pattern/g;

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier regex)
      (regex
        (regex_pattern)
        (regex_flags)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "regex",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "regex",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 7,
            end_line: 1,
            end_column: 12,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
