generated-tests/tests/snapshots/ts/test_generated_return_statement.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
function test() { return value24; }

AST:
(program
  (function_declaration
    (identifier test)
    (formal_parameters)
    (statement_block
      (return_statement
        (identifier value24)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "test",
            line_number: 1,
            definition_type: FunctionDefinition,
            scope: Some(
                "test",
            ),
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "value24",
            kind: Identifier,
            scope: Some(
                "test",
            ),
            start_line: 1,
            start_column: 26,
            end_line: 1,
            end_column: 33,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
