generated-tests/tests/snapshots/ts/test_generated_shorthand_property_identifier_pattern.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const { prop6 } = obj5;

AST:
(program
  (lexical_declaration
    (variable_declarator
      (object_pattern
        (shorthand_property_identifier_pattern)
      )
      (identifier obj5)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "prop6",
            position: Position {
                start_line: 1,
                start_column: 9,
                end_line: 1,
                end_column: 14,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "obj5",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 19,
                end_line: 1,
                end_column: 23,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
